--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -409,7 +409,8 @@
       "exist-address": "Ця адреса вже додана",
       "certificate-duration": "Термін дії сертифіката не може перевищувати 12 місяців",
       "friend-request": "Ви не можете додати цього друга",
-      "friend-already-added": "Цього друга вже було додано"
+      "friend-already-added": "Цього друга вже було додано",
+      "error-address": "Упс! Виникла помилка при створенні адреси. Будь ласка, спробуйте ще раз."
     },
     "attention": {
       "default": "Увага. Дію неможливо виконати, оскільки не виконані деякі умови.",
