--- a/src/assets/i18n/ubs/en.json
+++ b/src/assets/i18n/ubs/en.json
@@ -177,6 +177,7 @@
     "info-add-address": "Add address",
     "info-add-new-address": "Add another address",
     "info-address-coment": "Comment to the address",
+    "info-district-placeholder": "or choose from the list:",
     "info-coment-placeholder": "Any details you would like to tell us further",
     "info-back": "Back",
     "info-cancel": "Cancel",
