--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -517,7 +517,8 @@
       "certificate-duration": "Термін дії сертифіката не може перевищувати 12 місяців",
       "friend-request": "Ви не можете додати цього друга",
       "friend-already-added": "Цього друга вже було додано",
-      "error-address": "Упс! Виникла помилка при створенні адреси. Будь ласка, спробуйте ще раз."
+      "error-create-address": "Упс! Виникла помилка при створенні адреси. Будь ласка, спробуйте ще раз.",
+      "error-edit-address": "Упс! Виникла помилка при редагуванні адреси. Будь ласка, спробуйте ще раз."
     },
     "attention": {
       "default": "Увага. Дію неможливо виконати, оскільки не виконані деякі умови.",
