--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -509,7 +509,8 @@
       "certificate-duration": "The duration of the certificate cant be more than 12 months",
       "friend-request": "You cannot add this friend",
       "friend-already-added": "This friend has been already added",
-      "error-address": "Oops, An error occurred while creating the address. Please try again."
+      "error-create-address": "Oops, An error occurred while creating the address. Please try again.",
+      "error-edit-address": "Oops, An error occurred while edititng the address. Please try again."
     },
     "attention": {
       "default": "Attention message. The action cannot be performed, because conditions weren’t met.",
