--- a/src/assets/i18n/ubs-admin/en.json
+++ b/src/assets/i18n/ubs-admin/en.json
@@ -198,6 +198,7 @@
       "save": "Save"
     },
     "title": "Choose the time of export",
+    "optional-field": "optional",
     "export-time": {
       "from": "From",
       "to": "To"
@@ -419,7 +420,7 @@
   "responsible-persons": {
     "title": "Responsible persons",
     "service-manager": "Service manager",
-    "call-manager": "Call manager",
+    "call-manager": "Manager",
     "logistician": "Logistician",
     "navigator": "Navigator",
     "driver": "Driver",
