--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -816,7 +816,6 @@
       "privacy": "Конфіденційність профілю",
       "location": "Показувати моє місцезнаходження",
       "eco-place": "Показувати мої еко-місця",
-      "shopping-list": "Показувати мій список покупок",
       "to-do-list": "Показувати мій список завдань",
       "picture-tooltip": "Завантажуйте лише PNG або JPEG. Розмір файлу не повинен перевищувати 10Mb",
       "change-photo": "Ви хочете змінити свою фотографію профілю?",
@@ -930,7 +929,7 @@
       },
       "to-do": {
         "to-do-list": "Список завдань",
-        "no-shopping-items": "Не має елементів для рекомендації",
+        "no-to-do-items": "Не має елементів для рекомендації",
         "too-long-input": "Поле введення повинно містити не більше 2048 символів",
         "add-custom-item": "Додати власну річ",
         "save": "Зберегти",
