--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1132,6 +1132,7 @@
       "my-habits": "My habits",
       "my-news": "My news",
       "my-events": "My events",
+      "saved-events": "Saved events",
       "my-articles": "My articles",
       "habits-inprogress": "In progress",
       "add-new-habit": "Add New Habit",
