--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1160,6 +1160,7 @@
       "my-habits": "Мої звички",
       "my-news": "Мої новини",
       "my-events": "Мої події",
+      "saved-events": "Збережені події",
       "my-tips-and-tricks": "Мої статті",
       "habits-inprogress": "У процесі",
       "add-new-habit": "Додати Нову Звичку",
