feat: add tag filters no news

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1182,6 +1182,9 @@
       "add-event": "Додати подію",
       "no-events": "Привіт, Еко друг ;-)",
       "no-events-advice": "Ласкаво просимо до «Мої події». Здається, у вас немає подій. Почнемо приєднуватися до них!",
+      "no-news": "Привіт, Еко друг ;-)",
+      "no-news-advice": "Ласкаво просимо до «Мої новини. Здається, у вас немає новин. Почнемо створювати їх!",
+      "no-news-saved": "Ласкаво просимо до «Мої новини. Здається, у вас немає збережених подій.",
       "join-event": "Приєднатися до події"
     },
     "habits-in-progress": "звички у процесі",
