feat: add messages

--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1183,6 +1183,7 @@
       "no-events": "Привіт, Еко друг ;-)",
       "no-events-advice": "Ласкаво просимо до «Мої події». Здається, у вас немає подій. Почнемо приєднуватися до них!",
       "no-news": "Привіт, Еко друг ;-)",
+      "news-saved": "Збережені новини",
       "no-news-advice": "Ласкаво просимо до «Мої новини. Здається, у вас немає новин. Почнемо створювати їх!",
       "no-news-saved": "Ласкаво просимо до «Мої новини. Здається, у вас немає збережених подій.",
       "join-event": "Приєднатися до події"
