feat: Show places results in search popup
Now there will be three sections in search results:
- News
- Events
- Places

Resolves: #7751

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -313,6 +313,7 @@
       "items-found": "items found",
       "news": "News",
       "events": "Events",
+      "places": "Places",
       "see-all-news": "See all News",
       "see-all-results": "See all results"
     },
