--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -317,8 +317,8 @@
       "items-found": "знайдено",
       "news": "Новини",
       "events": "Події",
+      "places": "Місця",
       "see-all-news": "Дивіться всі новини",
-      "see-all-tips": "Дивіться всі поради та підказки",
       "see-all-results": "Дивіться всі результати"
     },
     "search-not-found": {
