--- a/src/assets/i18n/ubs-admin/en.json
+++ b/src/assets/i18n/ubs-admin/en.json
@@ -411,7 +411,7 @@
   "responsible-persons": {
     "title": "Responsible persons",
     "service-manager": "Service manager",
-    "call-manager": "Call manager",
+    "call-manager": "Manager",
     "logistician": "Logistician",
     "navigator": "Navigator",
     "driver": "Driver",
