provide optional fields to change status to adjustment form

--- a/src/assets/i18n/ubs-admin/en.json
+++ b/src/assets/i18n/ubs-admin/en.json
@@ -198,7 +198,8 @@
     "export-time": {
       "from": "From",
       "to": "To"
-    }
+    },
+    "optional-field": "optional"
   },
   "order-cancel": {
     "title": "Add reason to cancel order",
