--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -197,7 +197,8 @@
     "export-time": {
       "from": "З",
       "to": "До"
-    }
+    },
+    "optional-field": "необов'язково"
   },
   "order-cancel": {
     "title": "Додати причину скасування замовлення",
