--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -220,6 +220,11 @@
     "date": "Дaта",
     "added": "Додано"
   },
+  "order-status-confirm": {
+    "confirm-message": "Ви справді хочете змінити статус замовлення на",
+    "yes": "Так",
+    "no": "Ні"
+  },
   "order-not-taken-out": {
     "title": "Додайте причину невивезеного замовлення",
     "label-reason": "Опишіть, що сталося",
