--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -224,7 +224,7 @@
     "added": "Додано"
   },
   "order-status-confirm": {
-    "confirm-message": "Ви справді хочете змінити статус замовлення?",
+    "confirm-message": "Ви справді хочете змінити статус замовлення на",
     "yes": "Так",
     "no": "Ні"
   },
