--- a/src/assets/i18n/ubs-admin/en.json
+++ b/src/assets/i18n/ubs-admin/en.json
@@ -633,6 +633,7 @@
     "email": "Email*",
     "position": "Position*",
     "receiving-station": "Receiving station*",
+    "chat-hint": "Add a tariff first",
     "image-input": "Image",
     "picture-description-1": "Drop your",
     "picture-description-2": "image here or",
@@ -645,7 +646,7 @@
     "update": "Save",
     "filter-reset-all": "Reset all",
     "image-error": "The supported formats of the photo are PNG and JPG. Max size is 10MB",
-    "tariffs": "Tariffs",
+    "tariffs": "Tariffs*",
     "tariffs-columns": {
       "region": "Region",
       "city": "City",
