--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -631,6 +631,7 @@
     "email": "Email*",
     "position": "Посада*",
     "receiving-station": "Станція приймання*",
+    "chat-hint": "Спочатку додайте тариф",
     "image-input": "Фото",
     "picture-description-1": "Перетягніть",
     "picture-description-2": "зображення або",
@@ -643,7 +644,7 @@
     "update": "Зберегти",
     "filter-reset-all": "Очистити все",
     "image-error": "Підтримувані формати фотографії: PNG і JPG. Максимальний розмір – 10 Мб",
-    "tariffs": "Тарифи",
+    "tariffs": "Тарифи*",
     "tariffs-columns": {
       "region": "Область",
       "city": "Місто",
