--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -518,6 +518,10 @@
       "friend-request": "Ви не можете додати цього друга",
       "friend-already-added": "Цього друга вже було додано",
       "error-create-address": "Упс! Виникла помилка при створенні адреси. Будь ласка, спробуйте ще раз.",
+      "habit-not-added": "Неможливо прийняти запрошення",
+      "habit-already-added": "Неможливо відхилити запрошення",
+      "habit-added-success": "Запрошення прийнято",
+      "habit-decline-success": "Запрошення відхилено",
       "error-edit-address": "Упс! Виникла помилка при редагуванні адреси. Будь ласка, спробуйте ще раз."
     },
     "attention": {
