--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -520,8 +520,6 @@
       "error-create-address": "Упс! Виникла помилка при створенні адреси. Будь ласка, спробуйте ще раз.",
       "habit-not-added": "Неможливо прийняти запрошення",
       "habit-already-added": "Неможливо відхилити запрошення",
-      "habit-added-success": "Запрошення прийнято",
-      "habit-decline-success": "Запрошення відхилено",
       "error-edit-address": "Упс! Виникла помилка при редагуванні адреси. Будь ласка, спробуйте ще раз."
     },
     "attention": {
@@ -547,7 +545,9 @@
       "add-friend": "Запит на дружбу надіслано",
       "cancel-request": "Запит на дружбу скасовано",
       "joint-event-request": "Запит на приєднання до закритої події надіслано",
-      "create-news": "Ваша новина успішно опублікована"
+      "create-news": "Ваша новина успішно опублікована",
+      "habit-added-success": "Запрошення прийнято",
+      "habit-decline-success": "Запрошення відхилено"
     }
   },
   "user": {
