--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -516,7 +516,7 @@
       "exist-address": "Ця адреса вже додана",
       "certificate-duration": "Термін дії сертифіката не може перевищувати 12 місяців",
       "friend-request": "Ви не можете додати цього друга",
-      "friend-already-added": "Цього друга вже було додано",
+      "friend-already-added": "Це запрошення друга вже було додано або відхилено",
       "error-create-address": "Упс! Виникла помилка при створенні адреси. Будь ласка, спробуйте ще раз.",
       "habit-not-added": "Неможливо прийняти запрошення",
       "habit-already-added": "Неможливо відхилити запрошення",
@@ -547,7 +547,9 @@
       "joint-event-request": "Запит на приєднання до закритої події надіслано",
       "create-news": "Ваша новина успішно опублікована",
       "habit-added-success": "Запрошення прийнято",
-      "habit-decline-success": "Запрошення відхилено"
+      "habit-decline-success": "Запрошення відхилено",
+      "friend-added-success": "Запит на дружбу прийнято",
+      "friend-declined-success": "Запит на дружбу відхилено"
     }
   },
   "user": {
