feat: add invites page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1183,6 +1183,7 @@
     "zero-friends": "You don't have any friends yet.",
     "zero-user-friends": "This user has no friends",
     "zero-requests": "Unfortunately you don’t have new friends requests",
+    "zero-invitations": "Unfortunately you don’t have new habit invitations",
     "my-eco-places": "My Eco Places",
     "eco-places-quantity": {
       "plural": "favourites",
