--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1215,6 +1215,7 @@
     },
     "zero-friends": "У Вас ще немає друзів.",
     "zero-requests": "На жаль, у вас немає нових запитів у друзі",
+    "zero-invitations": "На жаль, у вас немає нових запрошень приєднання до звичок",
     "zero-user-friends": "Цей користувач не має друзів",
     "my-eco-places": "Мої Еко Місця",
     "eco-places-quantity": {
