--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1194,6 +1194,10 @@
       "no-news-saved": "Ласкаво просимо до «Мої новини. Здається, у вас немає збережених подій.",
       "join-event": "Приєднатися до події"
     },
+    "habit-invitations": {
+      "title": "Запрошення до звичок",
+      "zero-invitations": "На жаль, у вас немає нових запрошень приєднання до звичок"
+    },
     "habits-in-progress": "звички у процесі",
     "my-achievements": "Мої досягнення",
     "achieved": "досягнуто",
