--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1326,7 +1326,7 @@
     "btn-request-sent": "Request sent",
     "btn-delete": "Delete",
     "btn-see": "See rating",
-    "btn-rate": "Rate Event",
+    "btn-rate": "Rate Organizer",
     "btn-close": "Close",
     "btn-cancel-rate": "Cancel",
     "btn-save": "Save",
