fix: some texts and footer

--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -336,7 +336,7 @@
     },
     "send-button": "Надіслати повідомлення",
     "location": {
-      "title": "Вітаємо в УБС! Спочатку оберіть локацію вивезення відходів. Наразі ми працюємо тільки по м. Київ та обраним містам.",
+      "title": "Вітаємо в УБС! Оберіть локацію вивезення відходів. Наразі ми працюємо тільки в м. Києві та передмістті столиці в радіусі 20 км.",
       "info-region": "Наразі до Київської області включені міста в межах 20 км від м. Київ",
       "btn": {
         "back": "Назад",
@@ -963,7 +963,7 @@
     "pop-up-enter-you-location": "Введіть місцезнаходження",
     "pop-up-comment-placeholder": "Ремонтується дорога. Під’їзд до будинку доступний зі сторони будинку номер 15.",
     "info-personal-data": "Особисті дані",
-    "info-other-client": "Відправник інша людина",
+    "info-other-client": "Пакети передає інша людина",
     "info-name": "Ім'я",
     "info-phone": "Номер телефону",
     "info-surname": "Прізвище",
