--- a/src/assets/i18n/ubs/en.json
+++ b/src/assets/i18n/ubs/en.json
@@ -130,12 +130,13 @@
     "subtitle-first": "You can submit an",
     "unlimited": "unlimited",
     "subtitle-second": "the number of extrapositions of UBS Courier, necessarily fulfilling simple conditions:",
+    "extrapositions-conditions": "You can submit FREE recyclable materials for processing, provided you follow these simple conditions:",
     "aluminum": "aluminum cans (package type - package);",
     "metal": "tin cans (type of packaging - tight bag/box);",
     "bottles": "transparent PET bottles used for drinks (type of packaging - sack/bag);",
     "cardboard": "corrugated cardboard (separate the tape, stickers and all metal staples, for easy transport - fold it flat);",
     "polyfoam": "polyfoam (type of packaging - 120 l bag (we take no more than 1 bag for 1 shipment)).",
-    "condition1": "Indicate in the comment that you plan to give free positions to the Courier, as well as indicate their volume and number.",
+    "condition1": "Specify what exactly you want to submit and in what quantity. For example: a 20-liter bag of aluminum cans and a corrugated cardboard box measuring 70x40 cm.",
     "condition2": "Pack each type of package separately. A mix of these wastes in one bag/box will not be collected by UBS Courier. Tie up packages before handing them over.",
     "button": "OK"
   },
