--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -48,7 +48,7 @@
   },
   "order-details": {
     "location": {
-      "title": "Вітаємо в УБС! Спочатку оберіть локацію вивезення відходів. Наразі ми працюємо тільки по м. Київ та обраних містах.",
+      "title": "Вітаємо в УБС! Оберіть локацію вивезення відходів. Наразі ми працюємо тільки в м. Києві та передмістті столиці в радіусі 20 км.",
       "info-region": "Наразі до Київської області включені міста в межах 20 км від м. Київ",
       "btn": {
         "back": "Назад",
@@ -132,12 +132,13 @@
     "subtitle-first": "Ви можете здати",
     "unlimited": "безлімітну",
     "subtitle-second": "кількість екстрапозицій УБС Кур’єру, обов’язково виконавши прості умови:",
+    "extrapositions-conditions": "Ви можете здати БЕЗОПЛАТНІ позиції вторсировини на переробку, обовʼязково виконавши прості умови:",
     "aluminum": "алюмінієві бляшанки (тип паковання - пакет);",
     "metal": "жерстяні бляшанки (тип паковання - цупкий мішок/коробка);",
     "bottles": "PET-пляшки прозорі з-під напоїв (тип паковання - пакет/мішок);",
     "cardboard": "гофрокартон (відділіть скотч, наліпки та всі металеві скоби, для зручного транспортування — складіть його так, щоб він був пласким);",
     "polyfoam": "пінопласт (тип паковання - 120 л пакет (забираємо не більше 1 пакета за 1 вивіз)).",
-    "condition1": "Вкажіть в коментарі, що плануєте віддати Кур’єру безкоштовні позиції, а також зазначте їхній об’єм і кількість.",
+    "condition1": "Вкажіть, що саме ви хочете здати і в якій кількості. Наприклад: 20-літровий пакет з алюмінієвими бляшанками та коробка гофрокартону 70х40 см.",
     "condition2": "Кожен вид паковань спакуйте окремо. Мікс цих відходів у одному пакеті/коробці УБС Кур’єр не забиратиме. Зав’яжіть пакети перед здачею.",
     "button": "Зрозуміло"
   },
