--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -72,10 +72,11 @@
     "certificate": "Сертифікат:",
     "bonuses": "Бонуси: ",
     "amount-due": "Сума до оплати: ",
+    "attention": "УВАГА: ",
     "min-sum": "Мінімальна сума замовлення повинна складати {{value.totalLimit}} грн за пакети по {{value.bags}} л",
     "max-sum": "Максимальна сума замовлення - {{value.totalLimit}} грн за пакети по {{value.bags}} л",
-    "min-big-bags": "Зверніть, будь ласка, увагу на те, що мінімальне замовлення має містити не менше {{value.totalLimit}}  пакетів по {{value.bags}} л",
-    "max-big-bags": "Зверніть, будь ласка, увагу на те, що максимальне замовлення має містити не більше {{value.totalLimit}}  пакетів по {{value.bags}} л",
+    "min-big-bags": "Для замовлення послуги в межах 20 км від Києва потрібно зібрати мінімум {{value.totalLimit}}  пакетів по {{value.bags}} л",
+    "max-big-bags": "Максимальне замовлення має містити не більше {{value.totalLimit}}  пакетів по {{value.bags}} л",
     "question-certificate": "Якщо бажаєте скористатися сертифікатом, введіть номер сертифікату",
     "certificate-number": "Номер сертифіката",
     "activate": "Активувати",
@@ -166,7 +167,7 @@
     "pop-up-enter-you-location": "Введіть місцезнаходження",
     "pop-up-comment-placeholder": "Ремонтується дорога. Під’їзд до будинку доступний зі сторони будинку номер 15.",
     "info-personal-data": "Особисті дані",
-    "info-other-client": "Відправник інша людина",
+    "info-other-client": "Пакети передає інша людина",
     "info-name": "Ім'я",
     "info-phone": "Номер телефону",
     "info-surname": "Прізвище",
