--- a/src/assets/i18n/ubs/en.json
+++ b/src/assets/i18n/ubs/en.json
@@ -71,9 +71,10 @@
     "certificate": "Certificate:",
     "bonuses": "Bonuses: ",
     "amount-due": "Amount due: ",
+    "attention": "NOTICE: ",
     "min-sum": "The minimum order amount must be {{value.totalLimit}}  UAH for packages of {{value.bags}} l",
     "max-sum": "The maximum order amount is {{value.totalLimit}} UAH for packages of {{value.bags}} l",
-    "min-big-bags": "Please note that the minimum order must contain at least {{value.totalLimit}} packages of {{value.bags}} l",
+    "min-big-bags": "To order the service within 20 km from Kyiv, you need to collect a minimum of {{value.totalLimit}} packages of {{value.bags}} l",
     "max-big-bags": "Please note that the maximum order can contain {{value.totalLimit}} packages of {{value.bags}} l",
     "question-certificate": "If you want to use the certificate, enter its number",
     "certificate-number": "Certificate number",
