--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -48,7 +48,7 @@
   },
   "order-details": {
     "location": {
-      "title": "Вітаємо в УБС! Оберіть локацію вивезення відходів. Наразі ми працюємо тільки в м. Києві та передмістті столиці в радіусі 20 км.",
+      "title": "Вітаємо в УБС! Оберіть локацію вивезення відходів. Наразі ми працюємо тільки в м. Києві та передмісті столиці в радіусі 20 км.",
       "info-region": "Наразі до Київської області включені міста в межах 20 км від м. Київ",
       "btn": {
         "back": "Назад",
