fixed other texts

--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -275,7 +275,7 @@
         "content": {
           "li_1": "перелік",
           "li_1.1": "вторсировини",
-          "li_1.2": "все те саме, що приймає станція сортування УБС на переробку або безпечне спалювання, відходи для переробки і на спалювання можна класти в один пакет — ми все досортуємо за вас",
+          "li_1.2": "ви складаєте чисту і суху вторсировину + неліквідні пластики в пакет (можна не сортувати, ми зробимо це за вас)",
           "li_2": "текстильні вироби на спалювання",
           "li_2.1": "обов'язково мають бути в окремому пакеті –",
           "li_2.2": "правила підготовки текстилю до здачі",
@@ -297,7 +297,7 @@
           "li_2": "жерстяні бляшанки ",
           "li_3": "PET-пляшки прозорі з-під напоїв ",
           "li_4": "гофрокартон",
-          "li_5": "пінопласт (обмеження – безоплатно забираємо один пакет 120 л за 1 вивіз)"
+          "li_5": "пінопласт (обмеження – безоплатно забираємо один пакет: 120 л за 1 вивіз)"
         }
       },
       "conditions": {
