--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -234,7 +234,7 @@
     "oops": "Упс, щось пішло не так...",
     "order-not-paid-before": "На жаль, Ваше замовлення",
     "order-not-paid-after": "не було оплачено. Спробуйте ще раз.",
-    "description": "Щиро дякуємо, що здійснюєте контроль за відходами!",
+    "description": "Дякуємо, що піклуєтеся про довкілля разом з нами!",
     "ubsServices": "УБС сервіси",
     "other-order": "Зробити інше замовлення",
     "mail": "Пластик Поштою",
@@ -243,7 +243,7 @@
     "information": "Корисна інформація",
     "instruction": "Інструкція з переробки сміття",
     "video": "Відео про сортування і переробку",
-    "questions": "Якщо у Вас виникнуть запитання, Ви можете звернутись у чат підтримки.",
+    "questions": "Залишились питання? Наш чат підтримки — швидке і зручне рішення",
     "contact": "зв'язатись з нами"
   },
   "ubs-homepage": {
