--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -1204,7 +1204,7 @@
       "conditions": {
         "title": "Ви можете віддати безоплатно наведені вище екстрапозиції кур’єру, виконавши прості умови:",
         "item_1": "Вкажіть під час замовлення послуги, що плануєте віддати кур’єру безоплатні екстрапозиції, і зазначте їх кількість.",
-        "item_2": "Кожен вид паковань складіть окремо. Мікс цих відходів у одному пакеті/коробці кур’єр  не приймає. Зав'яжіть міцно кожен пакет."
+        "item_2": "Кожен вид упаковки складіть окремо. Мікс цих відходів у одному пакеті/коробці кур’єр  не приймає. Зав'яжіть міцно кожен пакет."
       },
       "minimum-volume": {
         "title": "Мінімальний об'єм для вивезення:",
