--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -140,7 +140,7 @@
     "cardboard": "гофрокартон (відділіть скотч, наліпки та всі металеві скоби, для зручного транспортування — складіть його так, щоб він був пласким);",
     "polyfoam": "пінопласт (тип паковання - 120 л пакет (забираємо не більше 1 пакета за 1 вивіз)).",
     "condition1": "Вкажіть, що саме ви хочете здати і в якій кількості. Наприклад: 20-літровий пакет з алюмінієвими бляшанками та коробка гофрокартону 70х40 см.",
-    "condition2": "Кожен вид паковань спакуйте окремо. Мікс цих відходів у одному пакеті/коробці УБС Кур’єр не приймає. Зав’яжіть пакети перед здачею.",
+    "condition2": "Кожен вид упаковки спакуйте окремо. Мікс цих відходів у одному пакеті/коробці УБС Кур’єр не приймає. Зав’яжіть пакети перед здачею.",
     "button": "Зрозуміло"
   },
   "personal-info": {
