--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -600,7 +600,7 @@
         "first-name-is-required": "Введіть ім'я",
         "user-name-error": "Iм'я користувача обов'язкове",
         "invalid-user-name": "Ім'я користувача не повинно містити крапку на початку, кілька крапок поспіль, спеціальні символи, кириличні літери",
-        "user-name-size": "Ім'я повинно містити 1-30 символів і може складатись з літер, цифр та крапки. Крапка на початку імені, в кінці та послідовність крапок заборонена.",
+        "user-name-size": "Ім’я користувача повинно містити від 1 до 30 символів і може містити літери, цифри, крапки, дефіси або апострофи. Крапки не можуть бути на початку або в кінці, а також не можуть йти поспіль. Подвійні дефіси або апострофи також заборонені.",
         "first-name-must-be-at-least-1-characters-long": "Ім'я повинно містити принаймі 1 символ",
         "last-name": "Прізвище",
         "last-name-is-required": "Введіть прізвище",
