--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -147,7 +147,7 @@
     "cardboard": "гофрокартон (відділіть скотч, наліпки та всі металеві скоби, для зручного транспортування — складіть його так, щоб він був пласким);",
     "polyfoam": "пінопласт (тип паковання - 120 л пакет (забираємо не більше 1 пакета за 1 вивіз)).",
     "condition1": "Вкажіть в коментарі, що плануєте віддати Кур’єру безкоштовні позиції, а також зазначте їхній об’єм і кількість.",
-    "condition2": "Кожен вид паковань спакуйте окремо. Мікс цих відходів у одному пакеті/коробці УБС Кур’єр не забиратиме. Зав’яжіть пакети перед здачею.",
+    "condition2": "Кожен вид паковань спакуйте окремо. Мікс цих відходів у одному пакеті/коробці УБС Кур’єр не приймає. Зав’яжіть пакети перед здачею.",
     "button": "Зрозуміло"
   },
   "personal-info": {
@@ -285,7 +285,7 @@
         "content": {
           "li_1": "перелік",
           "li_1.1": "вторсировини",
-          "li_1.2": "все те саме, що приймає станція сортування УБС на переробку або безпечне спалювання, відходи для переробки і на спалювання можна класти в один пакет — ми все досортуємо за вас",
+          "li_1.2": "ви складаєте чисту і суху вторсировину + неліквідні пластики в пакет (можна не сортувати, ми зробимо це за вас)",
           "li_2": "текстильні вироби на спалювання",
           "li_2.1": "обов'язково мають бути в окремому пакеті –",
           "li_2.2": "правила підготовки текстилю до здачі",
@@ -307,7 +307,7 @@
           "li_2": "жерстяні бляшанки ",
           "li_3": "PET-пляшки прозорі з-під напоїв ",
           "li_4": "гофрокартон",
-          "li_5": "пінопласт (обмеження – безоплатно забираємо один пакет 120 л за 1 вивіз)"
+          "li_5": "пінопласт (обмеження – безоплатно забираємо один пакет: 120 л за 1 вивіз)"
         }
       },
       "conditions": {
