change more text

--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -52,7 +52,7 @@
   },
   "order-details": {
     "location": {
-      "title": "Вітаємо в УБС! Спочатку оберіть локацію вивезення відходів. Наразі ми працюємо тільки по м. Київ та обраних містах.",
+      "title": "Вітаємо в УБС! Оберіть локацію вивезення відходів. Наразі ми працюємо тільки в м. Києві та передмісті столиці в радіусі 20 км.",
       "info-city": "До м. Київ також включені Гатне, Горенка, Зазим’є, Ірпінь, Княжичі, Коцюбинське, Новосілки, Петропавлівська Борщагівка, Погреби, Проліски, Софіївська Борщагівка, Чайки, Щасливе.",
       "info-region": "Наразі до Київської області включені міста в межах 20 км від м. Київ",
       "btn": {
@@ -146,7 +146,7 @@
     "bottles": "PET-пляшки прозорі з-під напоїв (тип паковання - пакет/мішок);",
     "cardboard": "гофрокартон (відділіть скотч, наліпки та всі металеві скоби, для зручного транспортування — складіть його так, щоб він був пласким);",
     "polyfoam": "пінопласт (тип паковання - 120 л пакет (забираємо не більше 1 пакета за 1 вивіз)).",
-    "condition1": "Вкажіть в коментарі, що плануєте віддати Кур’єру безкоштовні позиції, а також зазначте їхній об’єм і кількість.",
+    "condition1": "Вкажіть, що саме ви хочете здати і в якій кількості. Наприклад: 20-літровий пакет з алюмінієвими бляшанками та коробка",
     "condition2": "Кожен вид паковань спакуйте окремо. Мікс цих відходів у одному пакеті/коробці УБС Кур’єр не приймає. Зав’яжіть пакети перед здачею.",
     "button": "Зрозуміло"
   },
@@ -175,7 +175,7 @@
     "pop-up-enter-you-location": "Введіть місцезнаходження",
     "pop-up-comment-placeholder": "Ремонтується дорога. Під’їзд до будинку доступний зі сторони будинку номер 15.",
     "info-personal-data": "Особисті дані",
-    "info-other-client": "Відправник інша людина",
+    "info-other-client": "Пакети передає інша людина",
     "info-name": "Ім'я",
     "info-phone": "Номер телефону",
     "info-surname": "Прізвище",
