--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -340,7 +340,7 @@
     },
     "send-button": "Надіслати повідомлення",
     "location": {
-      "title": "Вітаємо в УБС! Спочатку оберіть локацію вивезення відходів. Наразі ми працюємо тільки по м. Київ та обраних містах.",
+      "title": "Вітаємо в УБС! Оберіть локацію вивезення відходів. Наразі ми працюємо тільки в м. Києві та передмісті столиці в радіусі 20 км.",
       "info-city": "До м. Київ також включені Гатне, Горенка, Зазим’є, Ірпінь, Княжичі, Коцюбинське, Новосілки, Петропавлівська Борщагівка, Погреби, Проліски, Софіївська Борщагівка, Чайки, Щасливе.",
       "info-region": "Наразі до Київської області включені міста в межах 20 км від м. Київ",
       "btn": {
@@ -975,7 +975,7 @@
     "pop-up-enter-you-location": "Введіть місцезнаходження",
     "pop-up-comment-placeholder": "Ремонтується дорога. Під’їзд до будинку доступний зі сторони будинку номер 15.",
     "info-personal-data": "Особисті дані",
-    "info-other-client": "Відправник інша людина",
+    "info-other-client": "Пакети передає інша людина",
     "info-name": "Ім'я",
     "info-phone": "Номер телефону",
     "info-surname": "Прізвище",
