--- a/src/assets/i18n/ubs-admin/en.json
+++ b/src/assets/i18n/ubs-admin/en.json
@@ -391,7 +391,9 @@
     "no-orders-found": "According to these criteria, no orders were found",
     "default-reset": "Reset width",
     "orders-number": "Number of orders",
-    "search": "Search"
+    "search": "Search",
+    "link-placeholder": "Provide a link to the chat with client",
+    "go-to-chat": "To chat"
   },
   "ubs-customer-filters": {
     "total-customers": "Total customers:",
@@ -1021,7 +1023,8 @@
     "newPassword-MatchesOld": "Enter the new password!",
     "password-error-confirm": "Passwords do not match!",
     "capacity": "Capacity must be greater than 0",
-    "email-exist": "Active employee with this email already exists"
+    "email-exist": "Active employee with this email already exists",
+    "binotel-link": "Please enter a valid link in the format: https://my.binotel.ua"
   },
   "ubs-notifications": {
     "page-title": "Notifications",
