--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -302,6 +302,7 @@
     "contacts": "Контакти",
     "email": "Електронна скринька",
     "phone": "№ телефону",
+    "client-chat": "Чат з клієнтом",
     "additionalInfo": "Додаткова інформація",
     "number_of_orders": "Кількість замовлень",
     "orderDate": "Дата замовлення",
