--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -1022,7 +1022,8 @@
     "newPassword-MatchesOld": "Введіть новий пароль!",
     "password-error-confirm": "Паролі не співпадають!",
     "capacity": "Поле повинно містити більше, ніж 0",
-    "email-exist": "Працівник з такою електронною поштою вже існує."
+    "email-exist": "Працівник з такою електронною поштою вже існує.",
+    "binotel-link": "Введіть посилання у форматі: https://my.binotel.ua"
   },
   "ubs-notifications": {
     "page-title": "Повідомлення",
@@ -1234,8 +1235,10 @@
   },
   "snack-bar": {
     "save-employee-permissons": "Внесені зміни збережено",
+    "update-chat-link": "Посилання успішно оновлено",
     "error": {
-      "exist-address": "Ця адреса вже додана"
+      "exist-address": "Ця адреса вже додана",
+      "fail-update-chat-link": "Щось пішло не так при оновленні посилання. Спробуйте, будь ласка, ще раз"
     }
   },
   "add-new-certificate": {
