--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -18,8 +18,7 @@
     "max-length": "Поле повинно містити 1-30 символів",
     "pattern": "Введіть коректний email",
     "number-length": "Поле повинно містити 12 символів",
-    "letters-and-numeric-only": "Дозволені лише букви та цифри",
-    "binotel-link": "Введіть посилання у форматі: https://my.binotel.ua"
+    "letters-and-numeric-only": "Дозволені лише букви та цифри"
   },
   "snack-bar": {
     "saved-order": "Тепер ви можете знайти своє замовлення №{{orderId}} у Вашому особистому кабінеті та продовжити його оформлення в будь-який час",
