--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -540,7 +540,8 @@
       "habit-added-success": "Habit invitation was accepted",
       "habit-decline-success": "Habit invitation was declined",
       "friend-added-success": "Friend invitation accepted",
-      "friend-declined-success": "Friend invitation declined"
+      "friend-declined-success": "Friend invitation declined",
+      "habit-invite-success": "Invite request sent"
     }
   },
   "user": {
@@ -1317,7 +1318,7 @@
     "my-space": "My Space",
     "follow-us": "Follow us",
     "events": "Events",
-    "ubs-courier":"UBS Courier"
+    "ubs-courier": "UBS Courier"
   },
   "event": {
     "btn-top": "More",
