add functionality to add/edit/delete chat link

--- a/src/assets/i18n/ubs-admin/ua.json
+++ b/src/assets/i18n/ubs-admin/ua.json
@@ -299,6 +299,7 @@
     "contacts": "Контакти",
     "email": "Електронна скринька",
     "phone": "№ телефону",
+    "client-chat": "Чат з клієнтом",
     "additionalInfo": "Додаткова інформація",
     "number_of_orders": "Кількість замовлень",
     "orderDate": "Дата замовлення",
@@ -382,7 +383,9 @@
     "filters": "Фільтри",
     "placeholder": "Пошук по імені або контактах",
     "no-orders-found": "За даними критеріями замовлень не знайдено",
-    "orders-number": "Кількість замовлень"
+    "orders-number": "Кількість замовлень",
+    "link-placeholder": "Надайте посилання на чат із клієнтом",
+    "go-to-chat": "В чат"
   },
   "ubs-customer-filters": {
     "total-customers": "Кількість користувачів:",
@@ -1006,7 +1009,8 @@
     "password-requirements": "Пароль має містити: мінімум 8 символів, 1 спеціальний символ, 1 цифру, 1 букву в нижньому та верхньому регістрах. Без пробілів.",
     "newPassword-MatchesOld": "Введіть новий пароль!",
     "password-error-confirm": "Паролі не співпадають!",
-    "email-exist": "Працівник з такою електронною поштою вже існує."
+    "email-exist": "Працівник з такою електронною поштою вже існує.",
+    "binotel-link": "Введіть посилання у форматі: https://my.binotel.ua"
   },
   "ubs-notifications": {
     "page-title": "Повідомлення",
@@ -1215,8 +1219,10 @@
   },
   "snack-bar": {
     "save-employee-permissons": "Внесені зміни збережено",
+    "update-chat-link": "Посилання успішно оновлено",
     "error": {
-      "exist-address": "Ця адреса вже додана"
+      "exist-address": "Ця адреса вже додана",
+      "fail-update-chat-link": "Щось пішло не так при оновленні посилання. Спробуйте, будь ласка, ще раз"
     }
   },
   "add-new-certificate": {
