--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1051,7 +1051,8 @@
         "good-day": "день поспіль",
         "good-days": "днів поспіль. Ти молодець!",
         "done": "Відмітити як виконану",
-        "great": "Чудово! Ви набули звичку!"
+        "great": "Чудово! Ви набули звичку!",
+        "friend-done-habit": "Виконано!"
       },
       "habit-widget": {
         "title": "Більше звичок пов'язаних з ",
@@ -1353,7 +1354,7 @@
     "my-space": "Мій Кабінет",
     "follow-us": "Приєднуйтесь до нас",
     "events": "Події",
-    "ubs-courier":"UBS Кур'єр"
+    "ubs-courier": "UBS Кур'єр"
   },
   "accessibility": {
     "skip-to-the-main-content": "перейти до основного контенту"
