add correct translation

--- a/src/assets/i18n/ubs/en.json
+++ b/src/assets/i18n/ubs/en.json
@@ -251,8 +251,7 @@
     "information": "Helpful information",
     "instruction": "Garbage recycling instructions",
     "video": "Sorting and Recycling Videos",
-    "questions": "If you have any questions, you can",
-    "contact": "contact us"
+    "questions": "Do you have any questions? Our support chat is a quick and convenient solution"
   },
   "ubs-homepage": {
     "general": "Convenient pick up service from UBS provides fast garbage collection",
