--- a/src/assets/i18n/ubs/ua.json
+++ b/src/assets/i18n/ubs/ua.json
@@ -28,7 +28,7 @@
       "not-enough-points": "На Вашому бонусному рахунку недостатньо коштів для розрахунку",
       "cartificate-not-valid": "Сертифікат, яким Ви плануєте розрахуватись, вже був використаний",
       "default": "Упс! Щось пішло не так. Будь ласка, перезавантажте сторінку або спробуйте ще раз.",
-      "restore-password-again": "Посилання на відновлення паролю уже не дійсне, будь ласка спробуйте відновити пароль знову",
+      "restore-password-again": "Посилання на відновлення паролю уже не дійсне, будь ласка, спробуйте відновити пароль знову",
       "unblock-account-again": "Посилання на розблокування аккаунту вже не дійсне. Будь ласка, перевірте, чи не було Ваш акаунт розблоковано автоматично",
       "no-internet": "Немає підключення до Інтернету",
       "exist-address": "Ця адреса вже додана"
@@ -80,8 +80,10 @@
     "amount-due": "Сума до оплати: ",
     "min-sum": "Мінімальна сума замовлення повинна складати {{value.totalLimit}} грн за пакети по {{value.bags}} л",
     "max-sum": "Максимальна сума замовлення - {{value.totalLimit}} грн за пакети по {{value.bags}} л",
-    "min-big-bags": "Зверніть, будь ласка, увагу на те, що мінімальне замовлення має містити не менше {{value.totalLimit}}  пакетів по {{value.bags}} л",
-    "max-big-bags": "Зверніть, будь ласка, увагу на те, що максимальне замовлення має містити не більше {{value.totalLimit}}  пакетів по {{value.bags}} л",
+    "min-big-bags": "Для замовлення послуги в межах 20км від Києва необхідно зібрати мінімум {{value.totalLimit}} {{value.bagsWord}} по {{value.bags}} л",
+    "min-big-bags-kyiv": "Для замовлення послуги в межах міста Києва необхідно зібрати мінімум {{value.totalLimit}} {{value.bagsWord}} по {{value.bags}} л",
+    "max-big-bags": "Максимальне замовлення в межах 20км від Києва має містити не більше {{value.totalLimit}} {{value.bagsWord}} по {{value.bags}} л",
+    "max-big-bags-kyiv": "Максимальне замовлення в межах міста Києва має містити не більше {{value.totalLimit}} {{value.bagsWord}} по {{value.bags}} л",
     "question-certificate": "Якщо бажаєте скористатися сертифікатом, введіть номер сертифікату",
     "certificate-number": "Номер сертифіката",
     "activate": "Активувати",
@@ -101,7 +103,7 @@
     "used": "Використано",
     "balance": "Залишилось",
     "eco-shop": "Екомагазин",
-    "shop-order-question": "Якщо Ви чекаєте замовлення з нашого Екомагазину, будь ласка введіть номер замовлення",
+    "shop-order-question": "Якщо Ви чекаєте замовлення з нашого Екомагазину, будь ласка, введіть номер замовлення",
     "cant-found-order": "Якщо Ви не змогли знайти номер замовлення, вкажіть в коментарі прізвище та ім’я, на які робили замовлення.",
     "enter-order-num": "Номер замовлення",
     "additional-orders": "Додати ще номер замовлення",
@@ -422,7 +424,7 @@
         "sign-up": "Зареєструватися",
         "sign-in-with-google": "Увійти через Google",
         "forgot-password": "Забули пароль?",
-        "account-has-been-deleted": "Ваш аккаунт було видалено, будь ласка зв'яжіться з нами щоб відновити його",
+        "account-has-been-deleted": "Ваш аккаунт було видалено, будь ласка, зв'яжіться з нами щоб відновити його",
         "havenot-account": "Досі немає аккаунту?",
         "or-signin": "або",
         "not-verified-email": "Ви повинні спочатку підтвердити електронну пошту, перевірте свою електронну скриньку!"
